--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Kucing &amp; Anjing Pedia"
+        android:text="Kucing,Anjing&amp; ayam pedia "
         android:textStyle="bold"
         android:textColor="@color/design_default_color_primary_dark"
         android:textSize="29sp"
@@ -43,6 +43,16 @@
             android:layout_weight="1"
             android:layout_height="150dp"
             android:src="@drawable/dog_kintamani"
+            android:scaleType="fitCenter"
+            />
+        <ImageButton
+            android:id="@+id/btn_buka_ras_ayam"
+            android:padding="16dp"
+            android:layout_margin="8dp"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="150dp"
+            android:src="@drawable/ayam_belengek"
             android:scaleType="fitCenter"
             />
     </LinearLayout>
